--- a/css/style.css
+++ b/css/style.css
@@ -516,9 +516,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
 }
 
-/*  .calc-height-min {
-        @apply h-[50vh];
-    } */
+.calc-height-min{
+  height: auto;
+}
 
 .swiperProjects{
   background-color: #f4f3f167;
@@ -575,11 +575,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   position: relative;
 }
 
-.sticky{
-  position: -webkit-sticky;
-  position: sticky;
-}
-
 .top-0{
   top: 0px;
 }
@@ -596,12 +591,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   bottom: 0px;
 }
 
-.z-10{
-  z-index: 10;
-}
-
 .z-20{
   z-index: 20;
+}
+
+.z-10{
+  z-index: 10;
 }
 
 .my-20{
@@ -690,10 +685,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-3{
   width: 0.75rem;
-}
-
-.w-\[\]{
-  width: ;
 }
 
 .-translate-x-\[150\%\]{
@@ -861,8 +852,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 2.5rem;
 }
 
-.pt-24{
-  padding-top: 6rem;
+.pt-44{
+  padding-top: 11rem;
 }
 
 .pb-20{
@@ -871,14 +862,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pb-1{
   padding-bottom: 0.25rem;
-}
-
-.pt-4{
-  padding-top: 1rem;
-}
-
-.pt-44{
-  padding-top: 11rem;
 }
 
 .text-left{
